--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,15 +1,40 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #121212; /* Dark background for modern look */
-    color: #f0f0f0; /* Light text color for contrast */
+    background-color: #ffffff; /* Dark background for modern look */
+    color: #000000; /* Light text color for contrast */
     margin: 0;
     padding: 0; /* Reset padding to prevent space at the top */
 }
 
+.navbar {
+    background: rgba(255, 255, 255, 0.2); /* Warna putih transparan */
+    backdrop-filter: blur(10px); /* Efek blur */
+    -webkit-backdrop-filter: blur(10px); /* Untuk dukungan di browser berbasis WebKit */
+    border-radius: 10px; /* Sedikit lengkungan pada tepi */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sedikit bayangan untuk memberi kesan melayang */
+}
+.navbar .nav-link {
+    color: #ff0000; /* Warna putih untuk teks navbar */
+    font-weight: bold;
+}
+.navbar .nav-link:hover {
+    color: #f1f1f1; /* Warna sedikit lebih terang saat hover */
+}
+
+h2{
+    font-weight: 700;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+
+
+
 .profile-card {
-    background-color: #1f1f1f; /* Dark card background */
-    border-radius: 10px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5); /* Strong shadow for depth */
+    background: rgba(255, 255, 255, 0.2); /* Warna putih transparan */
+    backdrop-filter: blur(10px); /* Efek blur */
+    -webkit-backdrop-filter: blur(10px); /* Untuk dukungan di browser berbasis WebKit */
+    border-radius: 10px; /* Sedikit lengkungan pada tepi */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Sedikit bayangan untuk memberi kesan melayang */
     padding: 30px; /* More padding for a spacious feel */
     text-align: center;
     margin-bottom: 50px;
@@ -32,11 +57,11 @@ body {
 
 .profile-info h4 {
     font-weight: bold;
-    color: #ffffff; /* White text for better visibility */
+    color: #000000; /* White text for better visibility */
 }
 
 .profile-info p {
-    color: #cccccc; /* Softer grey for other text */
+    color: #000000; /* Softer grey for other text */
 }
 
 .action-buttons .btn {
@@ -151,4 +176,17 @@ footer {
     }
 }
 
+#dslogo{
+    height: auto;
+    width: 7rem;
+}
 
+
+h5{
+    color: #121212;
+}
+
+
+.form-label{
+    color: #121212;
+}
